--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ body {
     top: 100px;
     border-radius: 50px;
     margin-top: 30px;
+    margin-bottom: 30px;
     align-items: center;
 }
 
@@ -184,5 +185,103 @@ body {
 /* ------------- FOOTER --------------- */
 
 footer {
+    background-image: radial-gradient(#000, transparent);
+    border-top: 1px solid #fff;
+    border-start-end-radius: 20px;
+    border-top-left-radius: 20px;
+    color: #fff;
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 20px;
+}
 
+form {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.formulario input {
+    width: 180px;
+}
+
+.formulario textarea {
+    max-width: 450px;
+    min-width: 100%;
+    max-height: 150px;
+    min-height: 30px;
+}
+
+.formulario input, .formulario textarea {
+    border: none;
+    border-radius: 20px;
+    padding: 10px;
+    border-bottom:1px solid #000 ;
+}
+
+.formulario input:focus, .formulario textarea:focus {
+    outline: 2px solid #00f;
+}
+
+textarea {
+    font-family: sans-serif;
+}
+
+input::placeholder, textarea::placeholder {
+    font-family: sans-serif;
+    color: #3337;
+}
+
+.formulario button {
+    width: fit-content;
+    padding: 12px 30px;
+    border-radius: 20px;
+    border: none;
+    color: #fff;
+    background-color: #48e;
+}
+
+.formulario button:hover {
+    outline: 2px solid #00f;
+    filter: drop-shadow(0 0 10px #00f) drop-shadow(0 0 5px #1ddbe9);
+}
+
+.email-asunto {
+    display: flex;
+    justify-content: space-between;
+}
+
+form label {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+footer img {
+    width: 50px;
+}
+
+.contactanos {
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+}
+
+.contactanos h2 {
+    text-align: center;
+}
+
+.redes {
+    width: 400px;
+    display: flex;
+    gap: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
