--- a/styles.css
+++ b/styles.css
@@ -285,3 +285,7 @@ footer img {
     justify-content: center;
     align-items: center;
 }
+
+.redes a:hover {
+    filter: drop-shadow(0 0 10px #fff) ;
+}
