--- a/paginas/cuestionarios/styles.css
+++ b/paginas/cuestionarios/styles.css
@@ -116,6 +116,7 @@ body {
     border-radius: 50px;
     text-align: justify;
     background-color: #fffa;
+    width: 800px;
 }
 
 .secion h2 {
@@ -127,17 +128,19 @@ body {
     text-shadow: -10px 0 10px #fff,-10px 0 10px #fff, -10px 0 10px #fff;
 }
 
-.secion h3 {
-    font-size: 30px;
-}
-
 .secion p {
     line-height: 1.6;
+    margin-top: 0;
 }
 
-.pastel-secion {
+.raya {
+    height: 5px;
+    width: 50px;
+    background-color: #333;
+}
+
+.formulario-main {
     display: flex;
-    align-items: center;
     border-top: 2px solid #333;
     border-bottom: 2px solid #333;
     border-radius: 20px;
@@ -148,38 +151,77 @@ body {
     gap: 30px;
 }
 
-.texto {
-    width: 400px;
+.formulario-main div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 15px 0;
 }
 
-.pastel-secion img {
-    max-width: 400px;
-    max-height: 400px;
-    border-radius: 50px;
+.formulario_primera-parte label, .pasteles, .comentario-mejora{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
 }
 
-.pastel-secion button {
+.formulario-main input, .formulario-main textarea {
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 20px;
+    
+}
+
+.formulario_primera-parte input:focus, .formulario-main textarea:focus {
+    outline: 2px solid #00f;
+}
+
+.formulario_primera-parte, #comentario-mejora {
+    width: 300px;
+    max-width: 300px;
+    min-width: 250px;
+    min-height: 30px;
+    max-height: 300px;
+}
+
+#pasteles {
+    padding: 10px;
+    border-radius: 20px;
+    width: 300px;
+    margin: 10px 0;
+}
+
+#pasteles:focus {
+    outline: 2px solid #00f;
+}
+
+.formulario-main button {
     border: none;
     padding: 12px 25px;
     border-radius: 20px;
+    width: 200px;
     border: #333;
     background-image: linear-gradient(to right, #000, #555);
     margin-top: 20px;
     transition:filter .2s ;
+    color: #fff;
+
 }
 
-.pastel-secion button:hover {
+.formulario-main button:hover {
     filter: drop-shadow(0 0 10px #00f);
     outline: 2px solid #fff;
 }
 
-.pastel-secion button a {
-    text-decoration: none;
-    color: #fff;
+.lado-derecho {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    gap: 30px;
 }
 
-.secion-invertido {
-    flex-direction: row-reverse;
+.lado-derecho img {
+    height: 350px;
+    object-fit: cover;
 }
 
 /* ------------- FOOTER --------------- */
